force-app/main/default/objects/Timeline_Child_Config__c/Timeline_Child_Config__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Stores configuration for child objects displayed in the Timeline History Component. Each record maps a child object to its parent for timeline display.</description>
    <label>Timeline Child Config</label>
</CustomObject>