force-app/main/default/objects/Timeline_Child_Config__c/fields/Child_Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Child_Object_API_Name__c</fullName>
    <description>API name of the child object to display history for</description>
    <label>Child Object API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>