force-app/main/default/objects/Timeline_Child_Config__c/fields/Child_Object_Label__c.field-meta.xml
<CustomField>
    <fullName>Child_Object_Label__c</fullName>
    <description>Display label for the child object</description>
    <label>Child Object Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>