force-app/main/default/objects/Timeline_Child_Config__c/fields/Icon_Name__c.field-meta.xml
<CustomField>
    <fullName>Icon_Name__c</fullName>
    <description>SLDS icon name for the timeline item</description>
    <label>Icon Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>