force-app/main/default/objects/Timeline_Child_Config__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When checked, this child object configuration is active</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>