force-app/main/default/objects/Timeline_Child_Config__c/fields/Parent_Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_Object_API_Name__c</fullName>
    <description>API name of the parent object</description>
    <label>Parent Object API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>