force-app/main/default/objects/Timeline_Child_Config__c/fields/Relationship_Field__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Field__c</fullName>
    <description>API name of the lookup field on the child object that relates to the parent</description>
    <label>Relationship Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>